# steamCloudSaveDownloaderGUI

./: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  scsd-gui
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: check-test-build.yml  publish.yml
steamCloudSaveDownloaderGUI/: __main__.py  core.py  data_provider.py  dialogs.py  game_info_dialog.py  main_window.py  menu.py  save_downloader.py  status_bar.py  system_tray.py  table_widget.py  thread_controller.py  translator.py  ver.py
steamCloudSaveDownloaderGUI/i18n/: scsdGUI_bg.ts  scsdGUI_cs.ts  scsdGUI_da.ts  scsdGUI_de.ts  scsdGUI_el.ts  scsdGUI_en.ts  scsdGUI_es_ES.ts  scsdGUI_fi.ts  scsdGUI_fr.ts  scsdGUI_hu.ts  scsdGUI_id.ts  scsdGUI_it.ts  scsdGUI_ja.ts  scsdGUI_ko.ts  scsdGUI_nl.ts  scsdGUI_no.ts  scsdGUI_pl.ts  scsdGUI_pt.ts  scsdGUI_pt_BR.ts  scsdGUI_ro.ts  scsdGUI_ru.ts  scsdGUI_sv.ts  scsdGUI_th.ts  scsdGUI_tr.ts  scsdGUI_uk.ts  scsdGUI_vi.ts  scsdGUI_zh_CN.ts  scsdGUI_zh_TW.ts
steamCloudSaveDownloaderGUI/res/: icon.py  icon.qrc  translations.qrc
